--- a/code/Post/Postcode.ipynb
+++ b/code/Post/Postcode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -42,12 +42,12 @@
      "output_type": "stream",
      "text": [
       "/home/martinachondo/PINN/code\n",
-      "/home/martinachondo/PINN/code/results/Main\n"
+      "/home/martinachondo/PINN/code/results/s11\n"
      ]
     }
    ],
    "source": [
-    "simulation_name = 'Main'\n",
+    "simulation_name = 's11'\n",
     "simulation_folder = 'tests'\n",
     "\n",
     "results_dir = os.path.sep.join(path_components[:-2])\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
       "      0       1.400       0.000     0.000    12.566    12.566    72.382\n",
       "TRIANGULATION...\n",
       "    Component 0\n",
-      "   contact faces isolated vertices 234335120\n",
+      "   contact faces isolated vertices 1369629696\n",
       "    component#, vertices,  edges,  faces, genus, density\n",
       "        0            460    1374     916    0    36.606\n",
       "        Time Triangulation real: 0.00 user: 0.00 sys: 0.00\n",
@@ -100,40 +100,39 @@
       "       0      1.40        4.136     12.482\n",
       "    Total ses_volume:     4.136\n",
       "MSMS terminated normally\n",
-      "Total Time real: 0.02 user: 0.01 sys: 0.00\n",
+      "Total Time real: 0.02 user: 0.02 sys: 0.00\n",
       "Found 1 meshes in 1\n",
       "Number of vertices: 460\n",
       "Number of Faces: 916\n",
       "Number of Regions: 1\n",
       "Number of Holes: 0\n",
-      "Region point: Tensor({0}:-0.0276667; {1}:-0.746766; {2}:0.3563)\n",
+      "Region point: Tensor({0}:-0.0276667; {1}:-0.676957; {2}:0.47532)\n",
       "Warning:  Unknown switch --.\n",
-      "Found 1 meshes in 1\n",
       "Delaunizing vertices...\n",
-      "Delaunay seconds:  0.011504\n",
+      "Delaunay seconds:  0.015634\n",
       "Creating surface mesh ...\n",
-      "Surface mesh seconds:  0.001192\n",
+      "Surface mesh seconds:  0.00275\n",
       "Recovering boundaries...\n",
-      "Boundary recovery seconds:  0.002088\n",
+      "Boundary recovery seconds:  0.00535\n",
       "Removing exterior tetrahedra ...\n",
       "Spreading region attributes.\n",
-      "Exterior tets removal seconds:  0.000343\n",
+      "Exterior tets removal seconds:  0.001028\n",
       "Recovering Delaunayness...\n",
-      "Delaunay recovery seconds:  0.008426\n",
+      "Delaunay recovery seconds:  0.018541\n",
       "Refining mesh...\n",
-      "Refinement seconds:  0.017471\n",
+      "Refinement seconds:  0.035168\n",
       "Smoothing vertices...\n",
-      "Mesh smoothing seconds:  0.018479\n",
+      "Mesh smoothing seconds:  0.042276\n",
       "Improving mesh...\n",
-      "Mesh improvement seconds:  0.000758\n",
+      "Mesh improvement seconds:  0.001249\n",
       "\n",
       "Writing nodes.\n",
       "Writing elements.\n",
       "Writing faces.\n",
       "Writing edges.\n",
       "\n",
-      "Output seconds:  0.000179\n",
-      "Total running seconds:  0.060586\n",
+      "Output seconds:  0.000605\n",
+      "Total running seconds:  0.123121\n",
       "\n",
       "Statistics:\n",
       "\n",
@@ -143,50 +142,51 @@
       "  Input holes: 0\n",
       "  Input regions: 1\n",
       "\n",
-      "  Mesh points: 637\n",
-      "  Mesh tetrahedra: 2376\n",
-      "  Mesh faces: 5210\n",
+      "  Mesh points: 639\n",
+      "  Mesh tetrahedra: 2368\n",
+      "  Mesh faces: 5194\n",
       "  Mesh faces on exterior boundary: 916\n",
       "  Mesh faces on input facets: 916\n",
       "  Mesh edges on input segments: 1374\n",
-      "  Steiner points inside domain: 177\n",
+      "  Steiner points inside domain: 179\n",
       "\n",
+      "Found 1 meshes in 1\n",
       "Found 1 meshes in 2\n",
       "Number of vertices: 1102\n",
       "Number of Faces: 2196\n",
       "Number of Regions: 1\n",
       "Number of Holes: 1\n",
-      "Region point: Tensor({0}:0.0276667; {1}:-0.591; {2}:-0.581667)\n",
+      "Region point: Tensor({0}:-0.0276667; {1}:-0.486489; {2}:0.669247)\n",
       "Region point: Tensor({0}:-4.19792; {1}:6.46119; {2}:0.535869)\n",
       "Warning:  Unknown switch --.\n",
       "Delaunizing vertices...\n",
-      "Delaunay seconds:  0.021861\n",
+      "Delaunay seconds:  0.036479\n",
       "Creating surface mesh ...\n",
-      "Surface mesh seconds:  0.002629\n",
+      "Surface mesh seconds:  0.008375\n",
       "Recovering boundaries...\n",
-      "Boundary recovery seconds:  0.003865\n",
+      "Boundary recovery seconds:  0.009587\n",
       "Removing exterior tetrahedra ...\n",
       "Spreading region attributes.\n",
-      "Exterior tets removal seconds:  0.001279\n",
+      "Exterior tets removal seconds:  0.004309\n",
       "Recovering Delaunayness...\n",
-      "Delaunay recovery seconds:  0.005181\n",
+      "Delaunay recovery seconds:  0.012251\n",
       "Refining mesh...\n",
-      "  1468 insertions, added 1416 points, 51989 tetrahedra in queue.\n",
-      "  488 insertions, added 400 points, 59042 tetrahedra in queue.\n",
-      "  651 insertions, added 457 points, 57056 tetrahedra in queue.\n",
-      "Refinement seconds:  0.075258\n",
+      "  1468 insertions, added 1379 points, 51499 tetrahedra in queue.\n",
+      "  488 insertions, added 415 points, 58999 tetrahedra in queue.\n",
+      "  651 insertions, added 450 points, 58622 tetrahedra in queue.\n",
+      "Refinement seconds:  0.199927\n",
       "Smoothing vertices...\n",
-      "Mesh smoothing seconds:  0.120409\n",
+      "Mesh smoothing seconds:  0.522576\n",
       "Improving mesh...\n",
-      "Mesh improvement seconds:  0.004495\n",
+      "Mesh improvement seconds:  0.009245\n",
       "\n",
       "Writing nodes.\n",
       "Writing elements.\n",
       "Writing faces.\n",
       "Writing edges.\n",
       "\n",
-      "Output seconds:  0.000439\n",
-      "Total running seconds:  0.235715\n",
+      "Output seconds:  0.002908\n",
+      "Total running seconds:  0.806299\n",
       "\n",
       "Statistics:\n",
       "\n",
@@ -196,13 +196,13 @@
       "  Input holes: 1\n",
       "  Input regions: 1\n",
       "\n",
-      "  Mesh points: 3639\n",
-      "  Mesh tetrahedra: 18847\n",
-      "  Mesh faces: 38792\n",
+      "  Mesh points: 3678\n",
+      "  Mesh tetrahedra: 19111\n",
+      "  Mesh faces: 39320\n",
       "  Mesh faces on exterior boundary: 2196\n",
       "  Mesh faces on input facets: 2196\n",
       "  Mesh edges on input segments: 3294\n",
-      "  Steiner points inside domain: 2537\n",
+      "  Steiner points inside domain: 2576\n",
       "\n",
       "Mesh initialization ready\n",
       "PDEs and datasets ready\n",
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -235,14 +235,14 @@
     }
    ],
    "source": [
-    "Iter = 10\n",
+    "Iter = 10000\n",
     "simulation.load_model(folder_path,results_path,Iter, save=False)\n",
     "Post = simulation.Post"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -250,13 +250,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "    \"Gsolv_value\": \"0.000\",\n",
-      "    \"L2_continuity_u\": \"3.252e-01\",\n",
-      "    \"L2_continuity_du\": \"4.035e-01\",\n",
-      "    \"Loss_XPINN\": \"9.264e+02\",\n",
-      "    \"Loss_NN1\": \"9.259e+02\",\n",
-      "    \"Loss_NN2\": \"6.796e-01\",\n",
-      "    \"L2_analytic\": \"2.129e+02\"\n",
+      "    \"Gsolv_value\": \"4307.492\",\n",
+      "    \"L2_continuity_u\": \"9.632e-03\",\n",
+      "    \"L2_continuity_du\": \"9.311e-02\",\n",
+      "    \"Loss_XPINN\": \"2.952e+00\",\n",
+      "    \"Loss_NN1\": \"9.866e-02\",\n",
+      "    \"Loss_NN2\": \"5.167e-02\",\n",
+      "    \"L2_analytic\": \"2.618e+02\"\n",
       "}\n"
      ]
     }
@@ -264,6 +264,26 @@
    "source": [
     "df = Post.save_values_file(save=False)\n",
     "print(json.dumps(df, indent=4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-163.71823653107927"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Post.PDE.get_solvation_energy(Post.XPINN.model)"
    ]
   },
   {
