--- a/code/Post/Postcode.ipynb
+++ b/code/Post/Postcode.ipynb
@@ -69,70 +69,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/martinachondo/PINN/code/Mesh/Mesh_softwares/MSMS/msms -if /home/martinachondo/PINN/code/Molecules/arg/arg.xyzr -of /home/martinachondo/PINN/code/Molecules/Saved_meshes/Temp/arg_d10 -p 1.4 -d 10 -no_header\n",
-      "MSMS 2.6.1 started on tulio\n",
-      "Copyright M.F. Sanner (1994)\n",
-      "Compilation flags -O2 -DVERBOSE -DTIMING\n",
-      "INPUT  /home/martinachondo/PINN/code/Molecules/arg/arg.xyzr 27 spheres 0 collision only, radii  0.600 to  1.908\n",
-      "PARAM  Probe_radius  1.400 density 10.000 hdensity  3.000\n",
-      "REDUCED SURFACE ...\n",
-      "    RS component 0 identified 13 14 12\n",
-      "    0 free edge(s) found in component 0\n",
-      "    RS component  #faces  #edges #free_edges  #vertices   genus\n",
-      "         0          42       63          0         20      1.5\n",
-      "    Time Reduced Surface real: 0.00 user: 0.00 sys: 0.00\n",
-      "ANALYTICAL SOLVENT EXCLUDED SURFACE...\n",
-      "    Component   0\n",
-      "        Time Surface real: 0.00 user: 0.00 sys: 0.00\n",
-      "        Time Singularities real: 0.00 user: 0.00 sys: 0.00\n",
-      "    SES comp.  #fac.  #edg. #s_edg. #vert. #s_vert. R_h C_h genus\n",
-      "         0      128    252      0     126        0   0   0    0\n",
-      "ANALYTICAL SURFACE AREA :\n",
-      "    Comp. probe_radius,   reent,    toric,   contact    SES       SAS\n",
-      "      0       1.400      17.975    74.593   105.479   198.047   383.835\n",
-      "TRIANGULATION...\n",
-      "    Component 0\n",
-      "    component#, vertices,  edges,  faces, genus, density\n",
-      "        0           1768    5298    3532    0     8.927\n",
-      "        Time Triangulation real: 0.00 user: 0.00 sys: 0.00\n",
-      "NUMERICAL VOLUMES AND AREA\n",
-      "    Comp. probe_radius SES_volume SES_area)\n",
-      "       0      1.40      197.329    196.843\n",
-      "    Total ses_volume:   197.329\n",
-      "MSMS terminated normally\n",
-      "Total Time real: 0.02 user: 0.02 sys: 0.00\n",
+      "\n",
+      "\n",
+      " <<INFO>> Starting NanoShaper 0.7.8\n",
+      " <<INFO>> Loading atoms....\n",
+      " <<INFO>> Read 27 atoms\n",
+      " <<INFO>> Geometric baricenter ->  -0.136 0.5195 0.4945\n",
+      " <<INFO>> Grid is 111\n",
+      " <<INFO>> MAX 5.364 6.0195 5.9945\n",
+      " <<INFO>> MIN -5.636 -4.9805 -5.0055\n",
+      " <<INFO>> Perfil 90 %\n",
+      " <<INFO>> Rmaxdim 10.065\n",
+      " <<INFO>> Allocating memory...ok!\n",
+      " <<INFO>> Initialization completed\n",
+      " <<INFO>> Adjusting self intersection grid \n",
+      " <<INFO>> Self intersection grid is (before) 7\n",
+      " <<INFO>> Self intersection grid is 4\n",
+      " <<INFO>> Allocating self intersection grid....ok!\n",
+      " <<INFO>> Computing alpha shape complex....ok!\n",
+      " <<INFO>> Checking 0 probes for self intersections...ok!\n",
+      " <<INFO>> Surface build-up time.. 0 [s]\n",
+      " <<INFO>> Probe Radius value 1.4\n",
+      " <<INFO>> Number of ses cells -> 117\n",
+      " <<INFO>> Number of del_point cells -> 20\n",
+      " <<INFO>> Number of regular del_edge cells -> 55\n",
+      " <<INFO>> Number of singular del_edge cells -> 0\n",
+      " <<INFO>> Number of regular del_facet cells -> 34\n",
+      " <<INFO>> Number of singular del_facet cells -> 4\n",
+      " <<INFO>> Use load balancing: 1\n",
+      " <<INFO>> Detected 48 logical cores\n",
+      " <<INFO>> Setting 48 threads\n",
+      " <<INFO>> Inside id value is 5\n",
+      " <<INFO>> Ray-tracing panel 0...ok!\n",
+      " <<INFO>> Ray-tracing panel 1...ok!\n",
+      " <<INFO>> Ray-tracing panel 2...ok!\n",
+      " <<INFO>> Ray-tracing computation time.. 0 [s]\n",
+      " <<INFO>> Approximated 0 rays (0.00000 %)\n",
+      " <<INFO>> Cavity detection time is 0 [s]\n",
+      " <<INFO>> Assembling octrees..ok!\n",
+      " <<INFO>> Surface computation time.. 0 [s]\n",
+      " <<INFO>> Estimated volume 198.224 [A^3]\n",
+      " <<INFO>> Triangulating Surface...\n",
+      " <<INFO>> Setting 48 threads\n",
+      " <<INFO>> Generating MC vertices...ok!\n",
+      " <<INFO>> MC added 0 non analytical vertices\n",
+      " <<INFO>> Triangles done\n",
+      " <<INFO>> MC time is 0 [s]\n",
+      " <<INFO>> Total, grid conformant, surface area is 197.966 [A^2]\n",
+      " <<INFO>> Number of vertices 29972 number of triangles 59940\n",
+      " <<INFO>> Saving in MSMS format, no patch info, no nearest atom..\n",
+      " <<INFO>> Smoothing surface...\n",
+      " <<INFO>> Saving in MSMS format, no patch info, no nearest atom..ok!\n",
+      " <<INFO>> Total Triangulation time 0 [s]\n",
+      "\n",
+      " <<INFO>> If you use NanoShaper please cite these works:\n",
+      " <<CITATION>> \tS. Decherchi, W. Rocchia, \"A general and Robust Ray-Casting-Based Algorithm for Triangulating Surfaces at the Nanoscale\"; PlosOne\n",
+      " <<CITATION>> \tlink: http://www.plosone.org/article/metrics/info%3Adoi%2F10.1371%2Fjournal.pone.0059744\n",
+      "\n",
+      "\n",
       "Found 1 meshes in 1\n",
       "Number of vertices: 1768\n",
       "Number of Faces: 3532\n",
       "Number of Regions: 1\n",
       "Number of Holes: 0\n",
-      "Region point: Tensor({0}:3.10082; {1}:-0.335667; {2}:4.51527)\n",
+      "Region point: Tensor({0}:1.69103; {1}:-0.580268; {2}:-3.73281)\n",
       "Warning:  Unknown switch --.\n",
       "Delaunizing vertices...\n",
-      "Delaunay seconds:  0.011004\n",
+      "Delaunay seconds:  0.013786\n",
       "Creating surface mesh ...\n",
-      "Surface mesh seconds:  0.00386\n",
+      "Surface mesh seconds:  0.005378\n",
       "Recovering boundaries...\n",
-      "Boundary recovery seconds:  0.00571\n",
+      "Boundary recovery seconds:  0.007587\n",
       "Removing exterior tetrahedra ...\n",
       "Spreading region attributes.\n",
-      "Exterior tets removal seconds:  0.002793\n",
+      "Exterior tets removal seconds:  0.003497\n",
       "Recovering Delaunayness...\n",
-      "Delaunay recovery seconds:  0.003787\n",
+      "Delaunay recovery seconds:  0.004549\n",
       "Refining mesh...\n",
-      "Refinement seconds:  0.053804\n",
+      "Refinement seconds:  0.072013\n",
       "Smoothing vertices...\n",
-      "Mesh smoothing seconds:  0.069671\n",
+      "Mesh smoothing seconds:  0.067635\n",
       "Improving mesh...\n",
-      "Mesh improvement seconds:  0.003914\n",
+      "Mesh improvement seconds:  0.004588\n",
       "\n",
       "Writing nodes.\n",
       "Writing elements.\n",
       "Writing faces.\n",
       "Writing edges.\n",
       "\n",
-      "Output seconds:  0.000837\n",
-      "Total running seconds:  0.155634\n",
+      "Output seconds:  0.001235\n",
+      "Total running seconds:  0.180532\n",
       "\n",
       "Statistics:\n",
       "\n",
@@ -142,74 +168,54 @@
       "  Input holes: 0\n",
       "  Input regions: 1\n",
       "\n",
-      "  Mesh points: 3022\n",
-      "  Mesh tetrahedra: 12844\n",
-      "  Mesh faces: 27454\n",
+      "  Mesh points: 3028\n",
+      "  Mesh tetrahedra: 12930\n",
+      "  Mesh faces: 27626\n",
       "  Mesh faces on exterior boundary: 3532\n",
       "  Mesh faces on input facets: 3532\n",
       "  Mesh edges on input segments: 5298\n",
-      "  Steiner points inside domain: 1254\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: atoms 23 is completely inside atom 21\n",
-      "WARNING: atoms 22 is completely inside atom 21\n",
-      "WARNING: atoms 6 is completely inside atom 5\n",
-      "WARNING: atoms 19 is completely inside atom 18\n",
-      "WARNING: atoms 26 is completely inside atom 24\n",
-      "WARNING: atoms 25 is completely inside atom 24\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "  Steiner points inside domain: 1260\n",
+      "\n",
       "Found 1 meshes in 1\n",
       "Found 1 meshes in 2\n",
       "Number of vertices: 2410\n",
       "Number of Faces: 4812\n",
       "Number of Regions: 1\n",
       "Number of Holes: 1\n",
-      "Region point: Tensor({0}:2.93713; {1}:-0.554954; {2}:4.68915)\n",
-      "Region point: Tensor({0}:-8.38103; {1}:12.8996; {2}:1.06985)\n",
+      "Region point: Tensor({0}:3.02991; {1}:-0.47891; {2}:4.56601)\n",
+      "Region point: Tensor({0}:-6.51543; {1}:10.0282; {2}:0.831701)\n",
       "Warning:  Unknown switch --.\n",
       "Delaunizing vertices...\n",
-      "Delaunay seconds:  0.015567\n",
+      "Delaunay seconds:  0.016853\n",
       "Creating surface mesh ...\n",
-      "Surface mesh seconds:  0.00472\n",
+      "Surface mesh seconds:  0.004882\n",
       "Recovering boundaries...\n",
-      "Boundary recovery seconds:  0.007695\n",
+      "Boundary recovery seconds:  0.007353\n",
       "Removing exterior tetrahedra ...\n",
       "Spreading region attributes.\n",
-      "Exterior tets removal seconds:  0.004088\n",
+      "Exterior tets removal seconds:  0.00367\n",
       "Recovering Delaunayness...\n",
-      "Delaunay recovery seconds:  0.004811\n",
+      "Delaunay recovery seconds:  0.004248\n",
       "Refining mesh...\n",
-      "  3212 insertions, added 2769 points, 103357 tetrahedra in queue.\n",
-      "  1069 insertions, added 844 points, 121665 tetrahedra in queue.\n",
-      "  1425 insertions, added 1123 points, 144817 tetrahedra in queue.\n",
-      "  1900 insertions, added 1437 points, 173597 tetrahedra in queue.\n",
-      "  2532 insertions, added 1727 points, 202828 tetrahedra in queue.\n",
-      "  3375 insertions, added 1626 points, 208769 tetrahedra in queue.\n",
-      "  4499 insertions, added 1191 points, 123325 tetrahedra in queue.\n",
-      "  5997 insertions, added 780 points, 8360 tetrahedra in queue.\n",
-      "Refinement seconds:  0.370491\n",
+      "  3212 insertions, added 2702 points, 101057 tetrahedra in queue.\n",
+      "  1069 insertions, added 784 points, 117211 tetrahedra in queue.\n",
+      "  1425 insertions, added 929 points, 133956 tetrahedra in queue.\n",
+      "  1900 insertions, added 932 points, 138883 tetrahedra in queue.\n",
+      "  2532 insertions, added 762 points, 88862 tetrahedra in queue.\n",
+      "  3375 insertions, added 395 points, 2428 tetrahedra in queue.\n",
+      "Refinement seconds:  0.237567\n",
       "Smoothing vertices...\n",
-      "Mesh smoothing seconds:  0.753584\n",
+      "Mesh smoothing seconds:  0.442749\n",
       "Improving mesh...\n",
-      "Mesh improvement seconds:  0.023703\n",
+      "Mesh improvement seconds:  0.014465\n",
       "\n",
       "Writing nodes.\n",
       "Writing elements.\n",
       "Writing faces.\n",
       "Writing edges.\n",
       "\n",
-      "Output seconds:  0.00414\n",
-      "Total running seconds:  1.18914\n",
+      "Output seconds:  0.002929\n",
+      "Total running seconds:  0.734954\n",
       "\n",
       "Statistics:\n",
       "\n",
@@ -219,13 +225,13 @@
       "  Input holes: 1\n",
       "  Input regions: 1\n",
       "\n",
-      "  Mesh points: 14293\n",
-      "  Mesh tetrahedra: 80531\n",
-      "  Mesh faces: 163468\n",
+      "  Mesh points: 8997\n",
+      "  Mesh tetrahedra: 47883\n",
+      "  Mesh faces: 98172\n",
       "  Mesh faces on exterior boundary: 4812\n",
       "  Mesh faces on input facets: 4812\n",
       "  Mesh edges on input segments: 7218\n",
-      "  Steiner points inside domain: 11883\n",
+      "  Steiner points inside domain: 6587\n",
       "\n",
       "Mesh initialization ready\n",
       "PDEs and datasets ready\n",
@@ -496,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,48 +511,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2677 2677 2677 703\n",
-      "978 978 978 491\n",
-      "39429 39429 39429 6965\n",
-      "1280 1280 1280 642\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_plot = dict()\n",
     "X_plot['Inner Domain'] = Post.mesh.region_meshes['R1'].vertices\n",
-    "X_plot['Charges'] = Post.mesh.prior_data['Q1'].numpy()\n",
-    "X_plot['Interface'] = Post.mesh.region_meshes['I'].vertices\n",
-    "X_plot['Outer Domain'] = Post.mesh.region_meshes['R2'].vertices\n",
-    "X_plot['Outer Border'] = Post.mesh.region_meshes['D2'].vertices\n",
     "X_plot['Inner Domain Sample'] = Post.mesh.region_meshes['R1'].get_dataset().numpy()\n",
+    "\n",
+    "X_plot['Charges'] = Post.mesh.prior_data['Q1'].numpy()\n",
+    "\n",
+    "X_plot['Interface'] = Post.mesh.region_meshes['I'].vertices\n",
     "X_plot['Interface Sample'] = Post.mesh.region_meshes['I'].get_dataset().numpy()\n",
+    "\n",
+    "X_plot['Outer Domain'] = Post.mesh.region_meshes['R2'].vertices\n",
     "X_plot['Outer Domain Sample'] = Post.mesh.region_meshes['R2'].get_dataset().numpy()\n",
+    "\n",
+    "X_plot['Outer Border'] = Post.mesh.region_meshes['D2'].vertices\n",
     "X_plot['Outer Border Sample'] = Post.mesh.region_meshes['D2'].get_dataset().numpy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2135 37294\n"
+      "12604 326\n"
      ]
     }
    ],
    "source": [
-    "s = mol_mesh.contains(X_plot['Outer Domain Sample'])\n",
+    "s = mol_mesh.contains(X_plot['Inner Domain Sample'])\n",
     "st = 0\n",
     "sf = 0\n",
     "for i in range(len(s)):\n",
@@ -555,6 +554,52 @@
     "    else:\n",
     "        sf+=1\n",
     "print(st,sf)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.03100002,  3.8440001 ,  3.13700008],\n",
+       "       [-0.56199998, -0.041     , -3.59299994],\n",
+       "       [-0.83399999,  0.243     , -3.53600001],\n",
+       "       ...,\n",
+       "       [-1.03799999, -2.454     , -0.067     ],\n",
+       "       [ 1.046     , -2.24000001, -0.066     ],\n",
+       "       [-2.17600012, -0.30700001, -2.12800002]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_plot['Inner Domain'][~s]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mol_mesh.contains([[-1.03100002,  3.8440001 ,  3.13700008]])"
    ]
   },
   {
@@ -579,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +633,7 @@
        "5.61922"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +653,7 @@
        "5.9695745"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -628,13 +673,72 @@
        "0.9602528"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.linalg.norm(Post.mesh.centroid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-1.03100002,  3.8440001 ,  3.13700008],\n",
+       "       [-1.43861133,  3.56253363,  2.88424426],\n",
+       "       [-0.92146109,  3.61931988,  2.59856082],\n",
+       "       ...,\n",
+       "       [-1.03799999, -2.454     , -0.067     ],\n",
+       "       [ 1.046     , -2.24000001, -0.066     ],\n",
+       "       [-2.17600012, -0.30700001, -2.12800002]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_plot['Inner Domain']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method contains in module trimesh.base:\n",
+      "\n",
+      "contains(points) method of trimesh.base.Trimesh instance\n",
+      "    Given an array of points determine whether or not they\n",
+      "    are inside the mesh. This raises an error if called on a\n",
+      "    non-watertight mesh.\n",
+      "    \n",
+      "    Parameters\n",
+      "    ------------\n",
+      "    points : (n, 3) float\n",
+      "      Points in cartesian space\n",
+      "    \n",
+      "    Returns\n",
+      "    ---------\n",
+      "    contains : (n, ) bool\n",
+      "      Whether or not each point is inside the mesh\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(mol_mesh.contains)"
    ]
   },
   {
