--- a/code/Post/Post_Template.ipynb
+++ b/code/Post/Post_Template.ipynb
@@ -13,15 +13,14 @@
     "import numpy as np\n",
     "\n",
     "current_directory = os.getcwd()\n",
-    "path_components = current_directory.split(os.path.sep)\n",
-    "new_directory = os.path.sep.join(path_components[:-2])\n",
-    "sys.path.append(new_directory)\n",
+    "main_path = os.path.dirname(os.path.dirname(current_directory))\n",
+    "sys.path.append(main_path)\n",
     "\n",
-    "simulation_name = path_components[-1]\n",
+    "simulation_name = os.path.basename(current_directory)\n",
     "results_path = current_directory\n",
-    "main_path = new_directory\n",
     "\n",
-    "shutil.copyfile(os.path.join(results_path,simulation_name+'.py'), os.path.join(main_path,'S_temp.py'))\n",
+    "shutil.copyfile(os.path.join(results_path, simulation_name + '.py'), os.path.join(main_path, 'S_temp.py'))\n",
+    "\n",
     "print(main_path)\n",
     "print(results_path)"
    ]
