--- a/tutorials/tutorial.ipynb
+++ b/tutorials/tutorial.ipynb
@@ -17,12 +17,10 @@
     "import os\n",
     "import sys\n",
     "\n",
-    "current_directory = os.getcwd()\n",
-    "path_components = current_directory.split(os.path.sep)\n",
-    "main_directory = os.path.sep.join(path_components[:-1])\n",
-    "code_directory = os.path.join(main_directory,'code')\n",
-    "sys.path.insert(0,code_directory)\n",
-    "simulation_name = os.path.join(current_directory,'tutorial.py')\n",
+    "main_directory = os.path.dirname(os.getcwd())\n",
+    "code_directory = os.path.join(main_directory, 'code')\n",
+    "sys.path.insert(0, code_directory)\n",
+    "simulation_name = os.path.join(main_directory, 'tutorial.py')\n",
     "print(simulation_name)"
    ]
   },
@@ -397,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.18"
   },
   "orig_nbformat": 4
  },
