--- a/code/Molecules/Known_Dataset.ipynb
+++ b/code/Molecules/Known_Dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "molecule = 'sphere_0.2'\n",
+    "molecule = 'sphere_+1+1'\n",
     "\n",
     "\n",
     "Rs = {'born_ion': 1,\n",
@@ -70,16 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[Charges(q=0.2, x_q=array([0., 0., 0.]), r_q=1.2, atom_name='H', res_name='SPH', res_num='1', ion_r_explode=3.5)]"
+       "[Charges(q=0.0, x_q=array([1.e-08, 0.e+00, 0.e+00]), r_q=1.2, atom_name='H', res_name='SPH', res_num='1', ion_r_explode=3.5),\n",
+       " Charges(q=1.0, x_q=array([0.5, 0. , 0. ]), r_q=0.0001, atom_name='H', res_name='SPH', res_num='1', ion_r_explode=3.5),\n",
+       " Charges(q=1.0, x_q=array([-0.5,  0. ,  0. ]), r_q=0.0001, atom_name='H', res_name='SPH', res_num='1', ion_r_explode=3.5)]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,26 +99,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/martinachondo/PINN/code/Model/Solutions_utils.py:111: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  zenit = np.arccos(x[K, 2] / rho)\n",
-      "/home/martinachondo/PINN/code/Model/Solutions_utils.py:122: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  zenit_k = np.arccos(xq[k, 2] / rho_k)\n"
+      "-564.268043256701\n",
+      "[-0.1311875  -0.13522412 -0.13522412]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "nan"
+       "-564.268043256701"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,11 +173,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mesh initialization ready\n"
+     ]
+    }
+   ],
    "source": [
-    "N=300\n",
+    "N=200\n",
     "x0=np.array([0,0,0])\n",
     "theta=0\n",
     "phi=np.pi/2\n",
@@ -194,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
